Adjust the example implementation to be user+role
