# app/openapi.yml
@@ -18,6 +18,7 @@ servers:
 
 tags:
   - name: Example
+  - name: User
   - name: Health
     description: API Health and Integrity
 
@@ -37,6 +38,37 @@ paths:
             application/json:
               schema:
                 type: boolean
+
+  /user:
+    post:
+      security:
+        - api_key: []
+      tags:
+        - Example
+      summary: Example post endpoint for creating a simple model in the DB
+      operationId: api.route.user_route.user_post
+      responses:
+        "201":
+          description: Example person was successfully submitted
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: '#/components/schemas/SuccessfulResponse'
+                  - properties:
+                      data:
+                        $ref: "#/components/schemas/UserResponse"
+        "400":
+          description: An unsuccessful request returns a 400 status code if one or more errors occurred.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UserBase"
 
   /example-person:
     post:
@@ -82,6 +114,64 @@ components:
       type: string
       example: '1970-01-01'
       format: date
+
+    UserBase:
+      type: object
+      properties:
+        first_name:
+          type: string
+          example: Jane
+          description: The users first name
+        middle_name:
+          type: string
+          example: Anne
+          nullable: true
+          description: The users middle name
+        last_name:
+          type: string
+          example: Doe
+          description: The users last name
+        phone_number:
+          type: string
+          example: "224-705-2345"
+          pattern: '^([0-9]|\*){3}\-([0-9]|\*){3}\-[0-9]{4}$'
+        date_of_birth:
+          $ref: "#/components/schemas/Date"
+        is_active:
+          type: boolean
+          example: true
+          description: whether or not the user is active
+        roles:
+          type: array
+          nullable: true
+          items:
+            $ref: "#/components/schemas/Role"
+
+    UserResponse:
+      type: object
+      properties:
+        user_id:
+          type: string
+          format: uuid
+          example: "2f0f58a0-fcad-465b-b474-ee6c961cd6e3"
+      allOf:
+        - $ref: "#/components/schemas/UserBase"
+
+    Role:
+      type: object
+      properties:
+        role_id:
+          type: integer
+          example: 1
+          nullable: true
+        role_description:
+          type: string
+          example: User
+          enum:
+          - User
+          - Admin
+          - Third Party
+
 
     ExamplePersonBase:
       type: object
